<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_casher">


    <fragment
        android:id="@+id/nav_casher"
        android:name="com.anas.cashier.ui.casher.CashierFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_casher" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.anas.cashier.ui.inventory.InventoryFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/nav_billing"
        android:name="com.anas.cashier.ui.billing.BillingFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_billing" />

    <fragment
        android:id="@+id/nav_debts"
        android:name="com.anas.cashier.ui.debts.DebtsFragment"
        android:label="Debts"
        tools:layout="@layout/fragment_debts" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.anas.cashier.ui.setting.SettingFragment"
        android:label="Setting"
        tools:layout="@layout/fragment_setting" />

<!--    <fragment-->
<!--        android:id="@+id/nav_logout"-->
<!--        android:name="com.anas.cashier.ui.logout.LogoutFragment"-->
<!--        android:label="Logout"-->
<!--        tools:layout="@layout/fragment_logout" />-->
</navigation>