<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:background="#F9F9F9">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F9F9F9"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/forget_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="@dimen/_20sdp"/>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="@id/img"
        app:layout_constraintEnd_toEndOf="@id/img"
        app:layout_constraintTop_toBottomOf="@id/img"/>


    <TextView
        android:id="@+id/tv_forget_password_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provide_your_mobile_number_for_which_want_n_to_reset_your_password"
        android:textColor="#707070"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="@id/tv_forget_password"
        app:layout_constraintEnd_toEndOf="@id/tv_forget_password"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password"/>


    <EditText
        android:id="@+id/et_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address_or_mobile_number"
        android:textColorHint="#707070"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/_10sdp"
        android:padding="@dimen/_12sdp"
        android:textSize="@dimen/_10sdp"
        android:textColor="#707070"
        android:background="@drawable/background_et_create_account"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/_10sdp"/>


    <Button
        android:id="@+id/send"
        android:layout_width="@dimen/_215sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/background_btn_create_account"
        app:layout_constraintTop_toBottomOf="@id/et_email_address"
        app:layout_constraintStart_toStartOf="@id/et_email_address"
        app:layout_constraintEnd_toEndOf="@id/et_email_address"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/send"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>